--- a/css/style.css
+++ b/css/style.css
@@ -63,5 +63,8 @@ nav {
   background: url(/Img/Slider_Block/Layer_1.jpg) no-repeat center;
   background-size: cover; }
   .news_slider {
-    max-width: 700px;
+    max-width: 90%;
     margin: 0 auto; }
+    .news_slider img {
+      margin: auto;
+      max-width: 500px; }
