--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,75 +1,78 @@
 @import url("/scss/resrt.css");
-
 nav {
-  // max-width: 1200px; ??
-  background-color: #ffffff;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 60px;
-  ul {
+    // max-width: 1200px; ??
+    background-color: #ffffff;
+    width: 100%;
     display: flex;
-    li {
-      list-style-type: none;
-      &:after {
-        content: "\007C";
-        margin: 0 30px 0;
-      }
-      &:last-child::after {
-        content: "";
-        margin: 0;
-      }
+    justify-content: space-around;
+    align-items: center;
+    height: 60px;
+    ul {
+        display: flex;
+        li {
+            list-style-type: none;
+            &:after {
+                content: "\007C";
+                margin: 0 30px 0;
+            }
+            &:last-child::after {
+                content: "";
+                margin: 0;
+            }
+        }
+        a {
+            color: #ffffff;
+            text-transform: uppercase;
+            text-decoration: none;
+            width: 664px;
+            height: 13px;
+            color: #000000;
+            font-family: "Open Sans";
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 24px;
+            text-transform: uppercase;
+        }
     }
-    a {
-      color: #ffffff;
-      text-transform: uppercase;
-      text-decoration: none;
-      width: 664px;
-      height: 13px;
-      color: #000000;
-      font-family: "Open Sans";
-      font-size: 13px;
-      font-weight: 400;
-      line-height: 24px;
-      text-transform: uppercase;
-    }
-  }
 }
 
 .burger {
-  position: relative;
-  width: 30px;
-  height: 20px;
-  // transition: all 0.5s ease 0s;
-  &:before,
-  &:after,
-  span {
-    content: "";
-    position: absolute;
-    background-color: #000;
+    position: relative;
     width: 30px;
-    height: 4px;
-    transition: all 0.1s ease 0s;
-    border-radius: 2px;
-  }
-  &:before {
-    top: 0;
-  }
-  &:after {
-    bottom: 0;
-  }
-  span {
-    top: 8px;
-  }
-  display: none; //!!
+    height: 20px;
+    // transition: all 0.5s ease 0s;
+    &:before,
+    &:after,
+    span {
+        content: "";
+        position: absolute;
+        background-color: #000;
+        width: 30px;
+        height: 4px;
+        transition: all 0.1s ease 0s;
+        border-radius: 2px;
+    }
+    &:before {
+        top: 0;
+    }
+    &:after {
+        bottom: 0;
+    }
+    span {
+        top: 8px;
+    }
+    display: none; //!!
 }
 
 .news {
-  background: url(/Img/Slider_Block/Layer_1.jpg) no-repeat center;
-  background-size: cover;
-  &_slider {
-    max-width: 700px;
-    margin: 0 auto;
-  }
+    background: url(/Img/Slider_Block/Layer_1.jpg) no-repeat center;
+    background-size: cover;
+    &_slider {
+        max-width: 90%;
+        margin: 0 auto;
+        img {
+            margin: auto;
+            max-width: 500px;
+        }
+    }
 }
