--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("/scss/resrt.css");
+@import url("/scss/button.css");
 nav {
   background-color: #ffffff;
   width: 100%;
@@ -82,56 +83,97 @@ nav ul a {
 .news {
   background: url(/img/Slider_Block/Layer_1.jpg) no-repeat center;
   background-size: cover;
-  -webkit-backdrop-filter: blur(50px);
-  backdrop-filter: blur(50px);
   height: 590px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .news_slider {
   max-width: 90%;
-  margin: 0 auto;
 }
 
 .news_slider_block {
-  display: block;
-  margin: 0 auto;
   outline: none;
   text-align: center;
-}
-
-.news_slider_block h3,
-.news_slider_block h1,
-.news_slider_block button,
-.news_slider_block p {
-  margin: 0 auto;
   font-family: "Open Sans";
-  text-transform: uppercase;
   color: #ffffff;
 }
 
-.news_slider_block span {
-  color: #f4bb36;
+.news_slider_block h3 {
+  margin: 120px 0 0 0;
+  font-size: 28px;
+  font-weight: 400;
 }
 
 .news_slider_block h1 {
-  text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.36);
+  text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
   font-size: 65px;
+  text-transform: uppercase;
+}
+
+.news_slider_block h1 span {
+  color: #f4bb36;
 }
 
 .news_slider_block p {
   font-size: 15px;
   font-weight: 400;
-  line-height: 24px;
-  width: 900px;
+  max-width: 900px;
   margin: 0 auto;
-}
-
-.news_slider_block h3 {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 77.37px;
+  text-transform: none;
 }
 
 .news_slider_block img {
   max-height: 500px;
+  margin: 0 auto;
+}
+
+.btn {
+  padding: 8px 20px;
+  font-size: 20px;
+  cursor: pointer;
+  position: relative;
+  border: 2px solid #f4bb36;
+  outline: none;
+  color: white;
+  background-color: transparent;
+  margin: 20px;
+  white-space: nowrap;
+}
+
+.btn::after, .btn::before {
+  content: "";
+  position: absolute;
+  border: 2px solid #f4bb36;
+  width: calc(100% - 5px);
+  height: 20px;
+  -webkit-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.btn::after {
+  top: -8px;
+  left: -8px;
+  border-right: none;
+  border-bottom: none;
+}
+
+.btn::before {
+  bottom: -8px;
+  right: -8px;
+  border-left: none;
+  border-top: none;
+}
+
+.btn:hover:after, .btn:hover:before {
+  width: calc(100% - 35px);
+  height: 40px;
 }
