--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import url("/scss/resrt.css");
+@import url("/scss/button.css");
 nav {
-    // max-width: 1200px; ??
     background-color: #ffffff;
     width: 100%;
     display: flex;
@@ -67,48 +67,82 @@ nav {
 .news {
     background: url(/img/Slider_Block/Layer_1.jpg) no-repeat center;
     background-size: cover;
-    backdrop-filter: blur(50px);
-    // opacity: 1.29;
     height: 590px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &_slider {
         max-width: 90%;
-        margin: 0 auto;
         &_block {
-            display: block;
-            margin: 0 auto;
             outline: none;
             text-align: center;
-            h3,
-            h1,
-            button,
-            p {
-                margin: 0 auto;
-                font-family: "Open Sans";
-                text-transform: uppercase;
-                color: #ffffff;
-            }
-            span {
-                color: #f4bb36;
+            font-family: "Open Sans";
+            color: #ffffff;
+            h3 {
+                // padding: 10px 10px;
+                margin: 120px 0 0 0;
+                font-size: 28px;
+                font-weight: 400;
+                // border: 2px solid #384e5d;
             }
             h1 {
-                text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.36);
+                text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
                 font-size: 65px;
+                text-transform: uppercase;
+                span {
+                    color: #f4bb36;
+                }
             }
             p {
                 font-size: 15px;
                 font-weight: 400;
-                line-height: 24px;
-                width: 900px;
+                max-width: 900px;
                 margin: 0 auto;
-            }
-            h3 {
-                font-size: 18px;
-                font-weight: 400;
-                line-height: 77.37px;
+                text-transform: none;
             }
             img {
                 max-height: 500px;
+                margin: 0 auto;
             }
         }
+    }
+}
+
+.btn {
+    padding: 8px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    position: relative;
+    border: 2px solid #f4bb36;
+    outline: none;
+    color: white;
+    background-color: transparent;
+    margin: 20px;
+    white-space: nowrap;
+    &::after,
+    &::before {
+        content: "";
+        position: absolute;
+        border: 2px solid #f4bb36;
+        width: calc(100% - 5px);
+        height: 20px;
+        transition: 0.5s ease;
+    }
+    &::after {
+        top: -8px;
+        left: -8px;
+        border-right: none;
+        border-bottom: none;
+    }
+    &::before {
+        bottom: -8px;
+        right: -8px;
+        border-left: none;
+        border-top: none;
+    }
+    &:hover:after,
+    &:hover:before {
+        width: calc(100% - 35px);
+        height: 40px;
     }
 }
