--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,21 @@ nav ul a {
   width: calc(100% - 35px);
   height: 40px;
 }
+
+#ball {
+  width: 50px;
+  height: 50px;
+  background-color: #f4bb36;
+  border-radius: 50%;
+  left: calc(50% - 25px);
+  top: 5%;
+  position: absolute;
+}
+
+#ball p {
+  text-align: center;
+  font-size: 14px;
+  font-family: "Open Sans";
+  font-weight: 800;
+  margin: 3px;
+}
