--- a/scss/button.css
+++ b/scss/button.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:900');
-#wrap {
+.wrap {
     height: 500px;
     box-sizing: border-box;
     display: flex;
