--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@ nav {
     background-color: #ffffff;
     width: 100%;
     display: flex;
+    // position: fixed;
     justify-content: space-around;
     align-items: center;
     height: 60px;
@@ -14,6 +15,9 @@ nav {
             &:after {
                 content: "\007C";
                 margin: 0 30px 0;
+                @media (max-width: 1024px) {
+                    margin: 0 20px 0;
+                }
             }
             &:last-child::after {
                 content: "";
@@ -32,6 +36,9 @@ nav {
             font-weight: 400;
             line-height: 24px;
             text-transform: uppercase;
+        }
+        @media (max-width: 768px) {
+            display: none;
         }
     }
 }
@@ -62,6 +69,9 @@ nav {
         top: 8px;
     }
     display: none; //!!
+    @media (max-width: 768px) {
+        display: block;
+    }
 }
 
 .news {
@@ -74,35 +84,49 @@ nav {
     &_slider {
         max-width: 90%;
         &_block {
-            outline: none;
-            text-align: center;
-            font-family: "Open Sans";
-            color: #ffffff;
-            h3 {
-                // padding: 10px 10px;
-                margin: 120px 0 0 0;
-                font-size: 28px;
-                font-weight: 400;
-                // border: 2px solid #384e5d;
-            }
-            h1 {
-                text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
-                font-size: 65px;
-                text-transform: uppercase;
-                span {
-                    color: #f4bb36;
+            &_text {
+                outline: none;
+                text-align: center;
+                font-family: "Open Sans";
+                color: #ffffff;
+                h3 {
+                    // padding: 10px 10px;
+                    margin: 120px 0 0 0;
+                    font-size: 28px;
+                    font-weight: 400;
+                    // border: 2px solid #384e5d;
+                    @media (max-width: 768px) {
+                        margin: 30px 0 0 0;
+                    }
+                }
+                h1 {
+                    text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
+                    font-size: 65px;
+                    text-transform: uppercase;
+                    // line-height: 64px;
+                    span {
+                        color: #f4bb36;
+                    }
+                    @media (max-width: 768px) {
+                        font-size: 45px;
+                        // line-height: 34px;
+                    }
+                }
+                p {
+                    font-size: 15px;
+                    font-weight: 400;
+                    max-width: 900px;
+                    margin: 0 auto;
+                    text-transform: none;
                 }
             }
-            p {
-                font-size: 15px;
-                font-weight: 400;
-                max-width: 900px;
-                margin: 0 auto;
-                text-transform: none;
-            }
-            img {
-                max-height: 500px;
-                margin: 0 auto;
+            &_sl-img {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    max-height: 500px;
+                }
             }
         }
     }
@@ -155,13 +179,17 @@ nav {
     left: calc(50% - 25px);
     top: 5%;
     position: absolute;
-    p {
-        content: "drag me";
+    span {
+        display: block;
         text-align: center;
         font-size: 14px;
         font-family: "Open Sans";
         font-weight: 800;
-        margin: 3px;
-        &:hover
+        margin: 12px 0;
+        text-transform: uppercase;
+        line-height: 14px;
+    }
+    @media (max-width: 1024px) {
+        display: none;
     }
 }
