--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ nav ul a {
 }
 
 .news {
-  background: url(/img/Slider_Block/Layer_1.jpg) no-repeat center;
+  background: url("../img/Slider_Block/Layer_1.jpg") no-repeat center;
   background-size: cover;
   height: 590px;
   display: -webkit-box;
