--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
-@import url("/scss/resrt.css");
-@import url("/scss/button.css");
+@import url("../scss/resrt.css");
+@import url("../scss/button.css");
 nav {
     background-color: #ffffff;
     width: 100%;
