--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,7 +75,7 @@ nav {
 }
 
 .news {
-    background: url("../img/Slider_Block/Layer_1.jpg") no-repeat center;
+    background: url(../img/slider_block/Layer_1.jpg) no-repeat center;
     background-size: cover;
     height: 590px;
     display: flex;
