--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,9 +75,9 @@ nav {
 }
 
 .news {
-    // background: url(../img/slider_block/layer_1.jpg) no-repeat center;
+    background: url(../img/slider_block/layer_1.jpg) no-repeat center;
     background-size: cover;
-    background-color: rgba(0, 0, 0, 0.36);
+    // background-color: rgba(0, 0, 0, 0.36);
     height: 590px;
     display: flex;
     justify-content: center;
