--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,7 +75,6 @@ nav {
 }
 
 .news {
-    // background-color: rgba(0, 0, 0, 0.36);
     background: url(../img/slider_block/layer_1.jpg) no-repeat center;
     background-size: cover;
     height: 590px;
@@ -193,4 +192,11 @@ nav {
     @media (max-width: 1024px) {
         display: none;
     }
+}
+
+.wrap {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
