adapt of btn fr desig

--- a/slick/slick-theme.scss
+++ b/slick/slick-theme.scss
@@ -1,12 +1,9 @@
 @charset "UTF-8";
-
 // Default Variables
-
 // Slick icon entity codes outputs the following
 // "\2190" outputs ascii character "←"
 // "\2192" outputs ascii character "→"
 // "\2022" outputs ascii character "•"
-
 $slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
@@ -16,17 +13,16 @@ $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
 $slick-dot-character: "\2022" !default;
-$slick-dot-size: 6px !default;
+$slick-dot-size: 10px !default;
 $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
-
 @function slick-image-url($url) {
     @if function-exists(image-url) {
         @return image-url($url);
     }
     @else {
-        @return url($slick-loader-path + $url);
+        @return url($slick-loader-path+$url);
     }
 }
 
@@ -35,20 +31,24 @@ $slick-opacity-not-active: 0.25 !default;
         @return font-url($url);
     }
     @else {
-        @return url($slick-font-path + $url);
+        @return url($slick-font-path+$url);
     }
 }
+
 
 /* Slider */
 
 .slick-list {
+    z-index: 1;
     .slick-loading & {
         background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
     }
 }
 
+
 /* Icons */
-@if $slick-font-family == "slick" {
+
+@if $slick-font-family=="slick" {
     @font-face {
         font-family: "slick";
         src: slick-font-url("slick.eot");
@@ -58,10 +58,12 @@ $slick-opacity-not-active: 0.25 !default;
     }
 }
 
+
 /* Arrows */
 
 .slick-prev,
 .slick-next {
+    z-index: 2;
     position: absolute;
     display: block;
     height: 20px;
@@ -78,7 +80,8 @@ $slick-opacity-not-active: 0.25 !default;
     padding: 0;
     border: none;
     outline: none;
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         outline: none;
         background: transparent;
         color: transparent;
@@ -101,32 +104,33 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 .slick-prev {
-    left: -25px;
+    left: 25px;
     [dir="rtl"] & {
         left: auto;
-        right: -25px;
+        right: 25px;
     }
     &:before {
-        content: $slick-prev-character;
+        content: "←";
         [dir="rtl"] & {
-            content: $slick-next-character;
+            content: "→";
         }
     }
 }
 
 .slick-next {
-    right: -25px;
+    right: 25px;
     [dir="rtl"] & {
-        left: -25px;
+        left: 25px;
         right: auto;
     }
     &:before {
-        content: $slick-next-character;
+        content: "→";
         [dir="rtl"] & {
-            content: $slick-prev-character;
+            content: "←";
         }
     }
 }
+
 
 /* Dots */
 
@@ -163,7 +167,8 @@ $slick-opacity-not-active: 0.25 !default;
             color: transparent;
             padding: 5px;
             cursor: pointer;
-            &:hover, &:focus {
+            &:hover,
+            &:focus {
                 outline: none;
                 &:before {
                     opacity: $slick-opacity-on-hover;
