--- a/scss/resrt.css
+++ b/scss/resrt.css
@@ -43,7 +43,8 @@ body {
     min-height: 100vh;
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
-    line-height: 1.5;
+    /* line-height: 1.5; */
+    /* off  */
 }
 
 
@@ -90,10 +91,10 @@ select {
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 
 @media (prefers-reduced-motion: reduce) {
-    * {
+    /* * {
         animation-duration: 0.01ms !important;
         animation-iteration-count: 1 !important;
         transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
-    }
+    } */
 }
