--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,19 @@
-@import url("../scss/resrt.css");
-@import url("../scss/button.css");
+@import url("reset.css");
+@import url("button.css");
+$yel: #f4bb36;
+h3 {
+    margin-top: 90px;
+    font-size: 30px;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 77.37px;
+    text-transform: uppercase;
+}
+
+p {
+    margin-top: 20px;
+}
+
 nav {
     background-color: #ffffff;
     width: 100%;
@@ -31,7 +45,7 @@ nav {
             width: 664px;
             height: 13px;
             color: #000000;
-            font-family: "Open Sans";
+            // font-family: "Open Sans", Arial, Helvetica, sans-serif;
             font-size: 13px;
             font-weight: 400;
             line-height: 24px;
@@ -75,8 +89,8 @@ nav {
 }
 
 .news {
-    background: url(../img/slider_block/layer_1.jpg) no-repeat center;
-    background-size: cover;
+    background: url(../img/slider_block/layer_1.jpg) no-repeat center / cover;
+    // background-size: cover;
     height: 590px;
     display: flex;
     justify-content: center;
@@ -86,18 +100,22 @@ nav {
         &_block {
             outline: none;
             &_text {
+                margin-top: 120px;
                 text-align: center;
-                font-family: "Open Sans";
+                // font-family: "Open Sans";
                 color: #ffffff;
-                h3 {
+                @media (max-width: 768px) {
+                    margin: 60px 0 0 0;
+                }
+                @media (max-width: 425px) {
+                    margin: 30px 0 0 0;
+                }
+                p:first-child {
                     // padding: 10px 10px;
-                    margin: 120px 0 0 0;
+                    // margin: 120px 0 auto;
                     font-size: 28px;
                     font-weight: 400;
                     // border: 2px solid #384e5d;
-                    @media (max-width: 768px) {
-                        margin: 30px 0 0 0;
-                    }
                 }
                 p {
                     font-size: 15px;
@@ -112,7 +130,7 @@ nav {
                     text-transform: uppercase;
                     // line-height: 64px;
                     span {
-                        color: #f4bb36;
+                        color: $yel;
                     }
                     @media (max-width: 768px) {
                         font-size: 45px;
@@ -137,7 +155,7 @@ nav {
     font-size: 20px;
     cursor: pointer;
     position: relative;
-    border: 2px solid #f4bb36;
+    border: 2px solid $yel;
     outline: none;
     color: white;
     background-color: transparent;
@@ -147,7 +165,7 @@ nav {
     &::before {
         content: "";
         position: absolute;
-        border: 2px solid #f4bb36;
+        border: 2px solid $yel;
         width: calc(100% - 5px);
         height: 20px;
         transition: 0.5s ease;
@@ -174,7 +192,7 @@ nav {
 #ball {
     width: 50px;
     height: 50px;
-    background-color: #f4bb36;
+    background-color: $yel;
     border-radius: 50%;
     left: calc(50% - 25px);
     top: 5%;
@@ -183,7 +201,7 @@ nav {
         display: block;
         text-align: center;
         font-size: 14px;
-        font-family: "Open Sans";
+        // font-family: "Open Sans";
         font-weight: 800;
         margin: 12px 0;
         text-transform: uppercase;
@@ -199,4 +217,31 @@ nav {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+}
+
+.workflow {
+    background: #f3f3f3;
+    display: flex;
+    justify-content: center;
+    &_element {
+        &_greeting {
+            text-align: center;
+            // font-family: "Open Sans";
+            h3 {
+                color: $yel;
+            }
+            p {
+                max-width: 1158px;
+                margin: 0 auto;
+                /* Style for "Lorem Ipsu" */
+                color: #414141;
+                font-size: 15px;
+                font-weight: 700;
+                line-height: 24px;
+            }
+        }
+        &_processes {
+            padding: 0;
+        }
+    }
 }
