--- a/slick/slick-theme.scss
+++ b/slick/slick-theme.scss
@@ -8,7 +8,7 @@ $slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
-$slick-dot-color: black !default;
+$slick-dot-color: #f4bb36 !default;
 $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
@@ -66,8 +66,8 @@ $slick-opacity-not-active: 0.25 !default;
     z-index: 2;
     position: absolute;
     display: block;
-    height: 20px;
-    width: 20px;
+    height: 100%;
+    width: 25%;
     line-height: 0px;
     font-size: 0px;
     cursor: pointer;
@@ -110,9 +110,9 @@ $slick-opacity-not-active: 0.25 !default;
         right: 25px;
     }
     &:before {
-        content: "←";
+        content: "";
         [dir="rtl"] & {
-            content: "→";
+            content: "";
         }
     }
 }
@@ -124,9 +124,9 @@ $slick-opacity-not-active: 0.25 !default;
         right: auto;
     }
     &:before {
-        content: "→";
+        content: "";
         [dir="rtl"] & {
-            content: "←";
+            content: "";
         }
     }
 }
