--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,15 @@
 @import url("reset.css");
 @import url("button.css");
 $yel: #f4bb36;
+$grey: #414141;
 h3 {
-    margin-top: 90px;
+    padding-top: 90px;
     font-size: 30px;
     font-size: 30px;
     font-weight: 700;
     line-height: 77.37px;
     text-transform: uppercase;
+    text-align: center;
 }
 
 p {
@@ -189,59 +191,75 @@ nav {
     }
 }
 
-#ball {
-    width: 50px;
-    height: 50px;
-    background-color: $yel;
-    border-radius: 50%;
-    left: calc(50% - 25px);
-    top: 5%;
-    position: absolute;
-    span {
-        display: block;
-        text-align: center;
-        font-size: 14px;
-        // font-family: "Open Sans";
-        font-weight: 800;
-        margin: 12px 0;
-        text-transform: uppercase;
-        line-height: 14px;
-    }
-    @media (max-width: 1024px) {
-        display: none;
-    }
-}
-
 .wrap {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // flex-direction: column;
+    // align-items: center;
 }
 
 .workflow {
-    background: #f3f3f3;
-    display: flex;
-    justify-content: center;
+    background: #fafafa;
+    height: 780px;
+    width: 100%;
     &_element {
+        display: block;
+        max-width: 1158px;
+        margin: 0 auto;
+        padding: 0 20px;
         &_greeting {
-            text-align: center;
+            // text-align: center;
             // font-family: "Open Sans";
             h3 {
                 color: $yel;
             }
             p {
-                max-width: 1158px;
                 margin: 0 auto;
-                /* Style for "Lorem Ipsu" */
-                color: #414141;
+                color: $grey;
                 font-size: 15px;
                 font-weight: 700;
                 line-height: 24px;
             }
         }
         &_processes {
-            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            // justify-content: center;
+            // align-items: center;
+            &_process {
+                margin: 60px 50px 0 0;
+                display: flex;
+                &_img {
+                    height: 54px;
+                    width: 54px;
+                    border: 1px solid black;
+                    border-radius: 50%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 12px;
+                    img {
+                        height: 26px;
+                        margin: 0 12px;
+                    }
+                }
+                &_text {
+                    h4 {
+                        margin-top: 10px;
+                        font-size: 25px;
+                        font-weight: 300;
+                    }
+                    p {
+                        width: 253px;
+                        color: $grey;
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: 24px;
+                        /* Text style for "Lorem Ipsu" */
+                        letter-spacing: 0.14px;
+                    }
+                }
+            }
         }
     }
 }
