--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,6 @@ nav ul a {
 
 .workflow {
   background: #fafafa;
-  height: 780px;
   width: 100%;
 }
 
@@ -249,7 +248,7 @@ nav ul a {
   display: block;
   max-width: 1158px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 20px 40px;
 }
 
 .workflow_element_greeting h3 {
@@ -270,6 +269,12 @@ nav ul a {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .workflow_element_processes_process {
@@ -277,6 +282,12 @@ nav ul a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 768px) {
+  .workflow_element_processes_process {
+    margin: 30px 0 0 0;
+  }
 }
 
 .workflow_element_processes_process_img {
@@ -308,7 +319,7 @@ nav ul a {
 }
 
 .workflow_element_processes_process_text p {
-  width: 253px;
+  max-width: 253px;
   color: #414141;
   font-size: 14px;
   font-weight: 400;
