--- a/scss/style.scss
+++ b/scss/style.scss
@@ -200,13 +200,12 @@ nav {
 
 .workflow {
     background: #fafafa;
-    height: 780px;
     width: 100%;
     &_element {
         display: block;
         max-width: 1158px;
         margin: 0 auto;
-        padding: 0 20px;
+        padding: 0 20px 40px;
         &_greeting {
             // text-align: center;
             // font-family: "Open Sans";
@@ -224,11 +223,14 @@ nav {
         &_processes {
             display: flex;
             flex-wrap: wrap;
-            // justify-content: center;
-            // align-items: center;
+            justify-content: center;
+            align-items: center;
             &_process {
                 margin: 60px 50px 0 0;
                 display: flex;
+                @media (max-width: 768px) {
+                    margin: 30px 0 0 0;
+                }
                 &_img {
                     height: 54px;
                     width: 54px;
@@ -250,7 +252,7 @@ nav {
                         font-weight: 300;
                     }
                     p {
-                        width: 253px;
+                        max-width: 253px;
                         color: $grey;
                         font-size: 14px;
                         font-weight: 400;
