--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ nav ul a {
   margin-top: 120px;
   text-align: center;
   color: #ffffff;
+  padding: 0 10px 0;
 }
 
 @media (max-width: 768px) {
@@ -172,17 +173,9 @@ nav ul a {
   }
 }
 
-.news_slider_block_text p:first-child {
+.news_slider_block_text h6 {
   font-size: 28px;
   font-weight: 400;
-}
-
-.news_slider_block_text p:last-child {
-  font-size: 15px;
-  font-weight: 400;
-  max-width: 900px;
-  margin: 0 auto;
-  text-transform: none;
 }
 
 .news_slider_block_text h1 {
@@ -199,6 +192,11 @@ nav ul a {
   .news_slider_block_text h1 {
     font-size: 45px;
   }
+}
+
+.news_slider_block_text p {
+  font-size: 15px;
+  font-weight: 400;
 }
 
 .news_slider_block_sl-img {
