--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,25 +120,16 @@ nav {
                 margin-top: 120px;
                 text-align: center;
                 color: #ffffff;
+                padding: 0 10px 0;
                 @media (max-width: 768px) {
                     margin: 60px 0 0 0;
                 }
                 @media (max-width: 425px) {
                     margin: 30px 0 0 0;
                 }
-                p:first-child {
-                    // padding: 10px 10px;
-                    // margin: 120px 0 auto;
+                h6 {
                     font-size: 28px;
                     font-weight: 400;
-                    // border: 2px solid #384e5d;
-                }
-                p:last-child {
-                    font-size: 15px;
-                    font-weight: 400;
-                    max-width: 900px;
-                    margin: 0 auto;
-                    text-transform: none;
                 }
                 h1 {
                     text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
@@ -152,6 +143,11 @@ nav {
                         font-size: 45px;
                         // line-height: 34px;
                     }
+                }
+                p {
+                    font-size: 15px;
+                    font-weight: 400;
+                    // max-width: 850px;
                 }
             }
             &_sl-img {
