--- a/css/style.css
+++ b/css/style.css
@@ -161,12 +161,6 @@ nav ul a {
   padding: 0 10px 0;
 }
 
-@media (max-width: 768px) {
-  .news_slider_block_text {
-    margin: 60px 0 0 0;
-  }
-}
-
 @media (max-width: 425px) {
   .news_slider_block_text {
     margin: 30px 0 0 0;
@@ -195,7 +189,7 @@ nav ul a {
 }
 
 .news_slider_block_text p {
-  font-size: 15px;
+  font-size: 15px !important;
   font-weight: 400;
 }
 
