--- a/scss/style.scss
+++ b/scss/style.scss
@@ -109,24 +109,18 @@ nav {
     align-items: center;
     &_slider {
         max-width: 100%;
-        &_block {
+        &_blocks {
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
             outline: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             &_text {
                 max-width: 1185px;
                 margin: 0 auto;
-                margin-top: 120px;
+                // margin-top: 120px;
                 text-align: center;
                 color: #ffffff;
                 padding: 0 10px 0;
-                // @media (max-width: 768px) {
-                //     margin: 60px 0 0 0;
-                // }
-                @media (max-width: 425px) {
-                    margin: 30px 0 0 0;
-                }
                 h6 {
                     font-size: 28px;
                     font-weight: 400;
@@ -135,27 +129,27 @@ nav {
                     text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
                     font-size: 65px;
                     text-transform: uppercase;
-                    // line-height: 64px;
                     span {
                         color: $yel;
                     }
                     @media (max-width: 768px) {
                         font-size: 45px;
-                        // line-height: 34px;
                     }
                 }
                 p {
-                    font-size: 15px !important;
+                    font-size: 15px;
                     font-weight: 400;
-                    // max-width: 850px;
+                    margin: 0 auto;
+                    max-width: 850px;
                 }
             }
             &_sl-img {
                 display: flex;
-                // align-items: center;
                 justify-content: center;
                 img {
-                    max-height: 500px;
+                    max-width: 100%;
+                    max-width: 100%;
+                    // object-fit: none;
                 }
             }
         }
