--- a/slick/slick.scss
+++ b/slick/slick.scss
@@ -43,7 +43,9 @@
     position: relative;
     left: 0;
     top: 0;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
     &:before,
