--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@ $yel: #f4bb36;
 $grey: #414141;
 @font-face {
     font-family: 'Open-sans';
-    src: url(fond/Open_Sans/OpenSans-Light.ttf);
+    src: url(../fond/Open_Sans/OpenSans-Light.ttf);
 }
 
 * {
