--- a/css/style.css
+++ b/css/style.css
@@ -3,141 +3,140 @@
 @import url("workflow.css");
 @import url("about.css");
 @font-face {
-    font-family: 'Open-sans';
-    src: url(fond/Open_Sans/OpenSans-Light.ttf);
+  font-family: 'Open-sans';
+  src: url(../fond/Open_Sans/OpenSans-Light.ttf);
 }
 
 * {
-    font-family: 'Open-sans', Arial, Helvetica, sans-serif;
+  font-family: 'Open-sans', Arial, Helvetica, sans-serif;
 }
 
 h3 {
-    padding-top: 90px;
-    font-size: 30px;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 77.37px;
-    text-transform: uppercase;
-    text-align: center;
+  padding-top: 90px;
+  font-size: 30px;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 77.37px;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 p {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 nav {
-    background-color: #ffffff;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    height: 60px;
+  background-color: #ffffff;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 60px;
 }
 
 nav ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 nav ul li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 nav ul li:after {
-    content: "\007C";
-    margin: 0 30px 0;
+  content: "\007C";
+  margin: 0 30px 0;
 }
 
 @media (max-width: 1024px) {
-    nav ul li:after {
-        margin: 0 20px 0;
-    }
+  nav ul li:after {
+    margin: 0 20px 0;
+  }
 }
 
 nav ul li:last-child::after {
-    content: "";
-    margin: 0;
+  content: "";
+  margin: 0;
 }
 
 nav ul a {
-    color: #ffffff;
-    text-transform: uppercase;
-    text-decoration: none;
-    width: 664px;
-    height: 13px;
-    color: #000000;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 24px;
-    text-transform: uppercase;
-    padding: 5px 0 5px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  width: 664px;
+  height: 13px;
+  color: #000000;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 24px;
+  text-transform: uppercase;
+  padding: 5px 0 5px;
 }
 
 nav ul a:hover {
-    border-bottom: 3px solid #f4bb36;
+  border-bottom: 3px solid #f4bb36;
 }
 
 nav ul a:active {
-    border-bottom: 2px solid #f4bb36;
+  border-bottom: 2px solid #f4bb36;
 }
 
 @media (max-width: 768px) {
-    nav ul {
-        display: none;
-    }
+  nav ul {
+    display: none;
+  }
 }
 
 .burger {
-    position: relative;
-    width: 30px;
-    height: 20px;
-    display: none;
+  position: relative;
+  width: 30px;
+  height: 20px;
+  display: none;
 }
 
-.burger:before,
-.burger:after,
+.burger:before, .burger:after,
 .burger span {
-    content: "";
-    position: absolute;
-    background-color: #000;
-    width: 30px;
-    height: 4px;
-    -webkit-transition: all 0.1s ease 0s;
-    -o-transition: all 0.1s ease 0s;
-    transition: all 0.1s ease 0s;
-    border-radius: 2px;
+  content: "";
+  position: absolute;
+  background-color: #000;
+  width: 30px;
+  height: 4px;
+  -webkit-transition: all 0.1s ease 0s;
+  -o-transition: all 0.1s ease 0s;
+  transition: all 0.1s ease 0s;
+  border-radius: 2px;
 }
 
 .burger:before {
-    top: 0;
+  top: 0;
 }
 
 .burger:after {
-    bottom: 0;
+  bottom: 0;
 }
 
 .burger span {
-    top: 8px;
+  top: 8px;
 }
 
 @media (max-width: 768px) {
-    .burger {
-        display: block;
-    }
+  .burger {
+    display: block;
+  }
 }
