--- a/scss/about.scss
+++ b/scss/about.scss
@@ -2,6 +2,7 @@
     background: url(../img/about/bgd_about.jpg) no-repeat center / cover;
     width: 100%;
     &_element {
+        padding: 0 10px;
         &_greeting {
             text-align: center;
             h3 {
@@ -22,7 +23,9 @@
         }
         &_doit {
             display: flex;
+            align-items: center;
             &_img {
+                flex: 0 0 33.333%;
                 img {
                     height: 100%;
                     width: 100%;
@@ -30,15 +33,24 @@
                 }
             }
             &_proces-history {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
+                // flex: 1 1 66.66%;
+                // display: flex;
+                // justify-content: center;
+                // flex-direction: column;
+                // align-items: center;
                 &_btn {
                     button {
                         margin: 10px;
                         padding: 10px;
+                        background-color: #fff;
                     }
+                }
+            }
+            @media (max-width: 768px) {
+                flex-direction: column;
+                &_img {
+                    margin: 20px 10%;
+                    // img {}
                 }
             }
         }
