--- a/scss/workflow.scss
+++ b/scss/workflow.scss
@@ -1,7 +1,7 @@
 $yel: #f4bb36;
 $grey: #414141;
 .workflow {
-    background: #fafafa;
+    background: url(../img/workflow/bgr_work.jpg) no-repeat center / cover;
     width: 100%;
     &_element {
         display: block;
