--- a/css/about.css
+++ b/css/about.css
@@ -1,10 +1,17 @@
 .about {
   background: url(../img/about/bgd_about.jpg) no-repeat center/cover;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .about_element {
   padding: 0 10px;
+  max-width: 1185px;
 }
 
 .about_element_greeting {
@@ -36,12 +43,16 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .about_element_doit_img {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 33.333%;
-  flex: 0 0 33.333%;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
 }
 
 .about_element_doit_img img {
@@ -51,6 +62,23 @@
   object-fit: cover;
 }
 
+.about_element_doit_proces-history {
+  max-width: 362px;
+  margin-left: 30px;
+}
+
+.about_element_doit_proces-history h5 {
+  color: #3e2d35;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.about_element_doit_proces-history p {
+  color: #8e561b;
+  font-size: 14px;
+  margin-bottom: 35px;
+}
+
 .about_element_doit_proces-history_btn button {
   margin: 10px;
   padding: 10px;
@@ -58,13 +86,13 @@
 }
 
 @media (max-width: 768px) {
-  .about_element_doit {
+  .about_element_doit_proces-history {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
   }
-  .about_element_doit_img {
+  .about_element_doit_proces-history_img {
     margin: 20px 10%;
   }
 }
