--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,58 +1,72 @@
-.about {
-    background: url(../img/about/bgd_about.jpg) no-repeat center / cover;
-    width: 100%;
-    &_element {
-        padding: 0 10px;
-        &_greeting {
-            text-align: center;
-            h3 {
-                color: black;
-            }
-            h2 {
-                color: #8e561b;
-                font-size: 40px;
-                font-weight: 100;
-            }
-            p {
-                margin: 0 auto;
-                color: #8e561b;
-                font-size: 15px;
-                font-style: italic;
-                line-height: 24px;
-            }
-        }
-        &_doit {
-            display: flex;
-            align-items: center;
-            &_img {
-                flex: 0 0 33.333%;
-                img {
-                    height: 100%;
-                    width: 100%;
-                    object-fit: cover;
-                }
-            }
-            &_proces-history {
-                // flex: 1 1 66.66%;
-                // display: flex;
-                // justify-content: center;
-                // flex-direction: column;
-                // align-items: center;
-                &_btn {
-                    button {
-                        margin: 10px;
-                        padding: 10px;
-                        background-color: #fff;
-                    }
-                }
-            }
-            @media (max-width: 768px) {
-                flex-direction: column;
-                &_img {
-                    margin: 20px 10%;
-                    // img {}
-                }
-            }
-        }
-    }
-}
+  .about {
+      background: url(../img/about/bgd_about.jpg) no-repeat center / cover;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      &_element {
+          padding: 0 10px;
+          max-width: 1185px;
+          //   align-items: center;
+          //   flex-direction: row;
+          &_greeting {
+              text-align: center;
+              h3 {
+                  color: black;
+              }
+              h2 {
+                  color: #8e561b;
+                  font-size: 40px;
+                  font-weight: 100;
+              }
+              p {
+                  margin: 0 auto;
+                  color: #8e561b;
+                  font-size: 15px;
+                  font-style: italic;
+                  line-height: 24px;
+              }
+          }
+          &_doit {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-top: 20px;
+              &_img {
+                  flex: 0 0 50%;
+                  img {
+                      height: 100%;
+                      width: 100%;
+                      object-fit: cover;
+                  }
+              }
+              &_proces-history {
+                  max-width: 362px;
+                  margin-left: 30px;
+                  h5 {
+                      color: #3e2d35;
+                      font-size: 20px;
+                      font-weight: 900;
+                  }
+                  p {
+                      color: #8e561b;
+                      font-size: 14px;
+                      margin-bottom: 35px;
+                  }
+                  &_btn {
+                      button {
+                          margin: 10px;
+                          padding: 10px;
+                          background-color: #fff;
+                      }
+                  }
+                  @media (max-width: 768px) {
+                      flex-direction: column;
+                      &_img {
+                          margin: 20px 10%;
+                          // img {}
+                      }
+                  }
+              }
+          }
+      }
+  }
