--- a/css/news.css
+++ b/css/news.css
@@ -67,7 +67,7 @@
 
 .news_slider_blocks_sl-img img {
   max-width: 100%;
-  max-width: 100%;
+  max-height: 450px;
   -o-object-fit: contain;
   object-fit: contain;
 }
