--- a/scss/news.scss
+++ b/scss/news.scss
@@ -48,7 +48,7 @@ $grey: #414141;
                 justify-content: center;
                 img {
                     max-width: 100%;
-                    max-width: 100%;
+                    max-height: 450px;
                     object-fit: contain;
                 }
             }
