--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import url("workflow.css");
 @import url("about.css");
 @import url("portfolio.css");
+@import url("team.css");
 $yel: #f4bb36;
 $grey: #414141;
 @font-face {
