--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -61,13 +61,14 @@ $grey: #414141;
                 &_project {
                     flex: 1 1 20%;
                     position: relative;
-                    min-width: 250px;
                     &_img {
+                        min-width: 250px;
                         height: 300px;
                         img {
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
+                            transition: all 0.3s ease 0s;
                         }
                     }
                     &_text {
